--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<app-header></app-header>
+<!--<app-header></app-header>!-->
+
+<div class="container">
+  <app-backorder></app-backorder>
+</div>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
