--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<!--<app-header></app-header>!-->
+<app-header></app-header>
 
-<div class="container">
+<!--<div class="container">
   <app-backorder></app-backorder>
-</div>
+</div>!-->
 <div class="container">
   <router-outlet></router-outlet>
 </div>
