--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,11 @@
       <a class="nav-link"[routerLink]="['food']"> 
       Menu 
       </a> 
-  </li>
+    </li>
+    <li class="nav-item"> 
+      <a class="nav-link"[routerLink]="['location']"> 
+      Localisation
+      </a> 
+    </li>
   </ul>
 </nav>
