--- a/src/app/backorder/backorder.component.html
+++ b/src/app/backorder/backorder.component.html
@@ -1,9 +1,11 @@
 
 <div class="row">
   <div class="col-md-6">
+    <h2>Liste des commandes en attente</h2>
     <div class="form-group" >
       <input type="text" id="searchInput" style="text-align:center" class="form-control text-center" [(ngModel)]="searchInput" placeholder="Search for names..">
     </div>
+    
     <table mat-table class ="table">
       <thead>
         <tr color="warn">
