--- a/src/app/backorder/backorder.component.html
+++ b/src/app/backorder/backorder.component.html
@@ -63,7 +63,7 @@
               <mat-icon class="material-icons contact" color="warn">
               location_on
               </mat-icon>
-              Adresse: <span> {{order.clientLocation}}</span>
+              Adresse: <span> {{order.clientLocation.district}}</span>
             </h2>
             <h2><mat-icon class="material-icons contact" color="warn">
               phone
