--- a/src/app/backorder/backorder.component.html
+++ b/src/app/backorder/backorder.component.html
@@ -6,7 +6,7 @@
       <input type="text" id="searchInput" style="text-align:center" class="form-control text-center" [(ngModel)]="searchInput" placeholder="Search for names..">
     </div>
     
-    <table mat-table class ="table">
+    <table class ="table">
       <thead>
         <tr color="warn">
                 
