--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -40,16 +40,19 @@ $admin-kom-theme: mat-light-theme($admin-kom-primary, $admin-kom-accent, $admin-
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$admin-kom-primary: mat-palette($mat-indigo);
+$my-theme: mat-palette($mat-green,A700);
+$admin-kom-rntic: mat-palette($mat-green,A700);
+$admin-kom-primary: mat-palette($mat-green,A700);
 $admin-kom-accent: mat-palette($mat-pink, A200, A100, A400);
 // The warn palette is optional (defaults to red).
 $admin-kom-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $admin-kom-theme: mat-light-theme($admin-kom-primary, $admin-kom-accent, $admin-kom-warn);
+$my-theme: mat-light-theme($admin-kom-rntic, $admin-kom-accent, $admin-kom-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($admin-kom-theme);
+@include angular-material-theme($my-theme);
 
