--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav *ngIf="authService.isLoggedIn" >
   <ul class="nav justify-content-center">
     <li class="nav-item"> <a class="nav-link" [routerLink]="['order/waiting']"> Commande  <span class="sr-only">(current)</span> </a> </li>
     <li class="nav-item"> <a class="nav-link"[routerLink]="['order/delivered']" > Livrer </a> </li>
@@ -8,8 +8,8 @@
       </a> 
     </li>
     <li class="nav-item"> 
-      <a class="nav-link"[routerLink]="['location']"> 
-      Localisation
+      <a class="nav-link" (click)="authService.SignOut()"> 
+      Deconnexion
       </a> 
     </li>
   </ul>
