--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="authService.isLoggedIn" >
+<nav >
   <ul class="nav justify-content-center">
     <li class="nav-item"> <a class="nav-link" [routerLink]="['order/waiting']"> Commande  <span class="sr-only">(current)</span> </a> </li>
     <li class="nav-item"> <a class="nav-link"[routerLink]="['order/delivered']" > Livrer </a> </li>
