--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -1,3 +1,41 @@
-<p>
-  food works!
-</p>
+<mat-form-field>
+  <mat-label>Filter</mat-label>
+  <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Ex. Mia">
+</mat-form-field>
+
+<button mat-raised-button (click)="openDialog()" color="primary">Ajouter</button>
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
+
+
+    <!-- Progress Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Prix </th>
+      <td mat-cell *matCellDef="let row"> {{row.price}}cfa </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
+      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+    </ng-container>
+
+    <!-- Color Column -->
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Categorie </th>
+      <td mat-cell *matCellDef="let row" [style.color]="row.category"> {{row.category}} </td>
+    </ng-container>
+    <!-- Color Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+      <td mat-cell *matCellDef="let row" > {{row.description}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+    </tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
