--- a/src/app/components/add-food/add-food.component.html
+++ b/src/app/components/add-food/add-food.component.html
@@ -7,7 +7,7 @@
   
     <mat-form-field appearance="fill">
       <mat-label>Prix</mat-label>
-      <input matInput type="number" class="example-right-align" formControlName="name">
+      <input matInput type="number" class="example-right-align" formControlName="price">
       <span matSuffix>.00 CFA</span>
     </mat-form-field>
     <br>
@@ -16,11 +16,6 @@
         <textarea matInput rows="2" cols="40" formControlName="description"></textarea>
     </mat-form-field>
     <br>
-    <mat-form-field appearance="fill">
-        <mat-label>Prix</mat-label>
-        <input matInput type="number" class="example-right-align" formControlName="price">
-        <span matSuffix>.00 CFA</span>
-    </mat-form-field>
     <mat-form-field appearance="fill">
         <mat-label>Categorie</mat-label>
         <mat-select formControlName="category">
@@ -39,4 +34,5 @@
     <button mat-raised-button color="primary" type="submit">Ajouter</button>
    </div>
     </form>
+    <button mat-button [mat-dialog-close]="" cdkFocusInitial>Annuler</button>
   </div>
