--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -27,9 +27,12 @@
       <td mat-cell *matCellDef="let row" [style.color]="row.category"> {{row.category}} </td>
     </ng-container>
     <!-- Color Column -->
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-      <td mat-cell *matCellDef="let row" > {{row.description}} </td>
+    <ng-container matColumnDef="Action">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+      <td mat-cell *matCellDef="let row" > 
+        <button mat-raised-button (click)="updateFood(row)" color="warn">Modifier</button>
+        <button mat-raised-button (click)="deleteFood(row.docId)" color="primary">Supprimer</button>  
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
