--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,23 +1,17 @@
-<div class="displayTable">
-    <div class="displayTableCell">
-      <div class="authBlock">
-        <h3>Reset Password</h3>
-  
-        <p class="text-center">Please enter your email address to request a password reset.</p>
-  
-        <div class="formGroup">
-          <input type="email" class="formControl" placeholder="Email Address" #passwordResetEmail required>
-        </div>
-  
-        <!-- Calling ForgotPassword from AuthService Api -->
-        <div class="formGroup">
-          <input type="submit" class="btn btnPrimary" value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)">
-        </div>
-      </div>
-  
-      <div class="redirectToLogin">
-        <span>Go back to ? <span class="redirect" routerLink="/sign-in">Log In</span></span>
-      </div>
-  
+<mat-card>
+  <mat-card-content>
+      <h3>Réinitialisation de mot de passe</h3>
+      <form class="example-form">
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Etrez votre email" #passwordResetEmail required>
+          <mat-error>
+            Email incorrect
+          </mat-error>
+        </mat-form-field>
+        <button mat-raised-button value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)" color="primary">Connexion</button>
+      </form>
+  </mat-card-content>
+    <div class="redirectToLogin">
+      <span>Aller à ? <a class="redirect" routerLink="/sign-in">Se connecter</a></span>
     </div>
-  </div>
+</mat-card>
