home-page shopping-page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,5 @@
 <!--<div class="container">
   <app-backorder></app-backorder>
 </div>!-->
-<div class="container">
   <router-outlet></router-outlet>
-</div>
+<app-footer></app-footer>
