--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,16 +1,55 @@
-<mat-toolbar color="warn" class="expanded-toolbar">
-    <a href=""><img class="logo" src="assets/logos/miam/miam2.png" alt="" ></a>
-    <button  mat-button  [routerLink]="['order/waiting']"> Commande  <span class="sr-only">(current)</span> </button>
-    <button  mat-button [routerLink]="['order/delivered']" > Livrer </button>
-    
-      <button  mat-button [routerLink]="['food']"> 
-      Mes plats 
-      </button> 
-      <span class="example-spacer"></span>
-      <div class="right-nav">
-        <mat-icon matBadge="15" [routerLink] = "['order-page']" matBadgeColor="warn">shopping_cart</mat-icon>
-        <button  mat-button  (click)="authService.SignOut()" *ngIf="0!=0" > 
-          Deconnexion
-        </button >
-      </div>
+<div class="side-div" style="height: 80vh;">
+  <mat-toolbar color="warn" class="expanded-toolbar">
+    <mat-toolbar-row>
+      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+        <mat-icon>menu</mat-icon>
+      </button>
+      <a class="a-logo" mat-button href=""><img class="logo" src="assets/logos/miam/miam2.png" alt="" ></a>
+      <span class="menu-spacer"></span>
+      <div fxShow="true" fxHide.lt-md>
+        <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+        <a mat-button   [routerLink]="['order/waiting']"> Commande  <span class="sr-only">(current)</span> </a>
+        <a mat-button  [routerLink]="['order/delivered']" > Livrer </a>
+        
+          <a mat-button  [routerLink]="['food']"> 
+          Mes plats 
+          </a> 
+          <span class="example-spacer"></span>
+            <mat-icon matBadge="15" [routerLink] = "['order-page']" matBadgeColor="warn">shopping_cart</mat-icon>
+            <a mat-button   (click)="authService.SignOut()" *ngIf="0!=0" > 
+              Deconnexion
+            </a>
+    </div>
+  </mat-toolbar-row>
 </mat-toolbar>
+
+<mat-sidenav-container [hasBackdrop]="false" fxFlexFill>
+  <mat-sidenav #sidenav>
+    <mat-nav-list>
+      <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+      
+      <a mat-list-item   [routerLink]="['order/waiting']"> Commande  <span class="sr-only">(current)</span> </a>
+      <a mat-list-item  [routerLink]="['order/delivered']" > Livrer </a>
+      
+        <a mat-list-item  [routerLink]="['food']"> 
+        Mes plats 
+        </a> 
+        <span class="example-spacer"></span>
+        <a mat-list-item  [routerLink]="['food']"> 
+        Mes plats 
+        </a> 
+        <a mat-list-item  [routerLink]="['food']"> 
+          <mat-icon matBadge="15" [routerLink] = "['order-page']" matBadgeColor="warn">shopping_cart</mat-icon>
+        </a> 
+        <a mat-list-item   (click)="authService.SignOut()" *ngIf="0!=0" > 
+           Deconnexion
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content fxFlexFill>  
+      <router-outlet></router-outlet>
+      <app-footer> </app-footer>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+  
+</div>
