--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html {
+    margin: 0 auto;
+  }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 input.mat-input-element {
     margin-top: -0.0625em;
