--- a/src/app/components/shopping-page/shopping-page.component.css
+++ b/src/app/components/shopping-page/shopping-page.component.css
@@ -1,9 +1,5 @@
-.example-container {
-    height: 270px;
-    overflow: auto;
-    max-width: 60%;
-  }
-  
+
+
   table {
     width: 100%;
   }
@@ -37,4 +33,46 @@ span.number-item {
     margin-right: 10%;
     top: -7px;
     font-weight: bold;
+}
+span.add{
+  color: #f44336;
+}
+span.remove{
+  margin-right: 5%;
+}
+@media ( max-width: 576px ) {
+  .example-container {
+    height: 270px;
+    overflow: auto;
+  }
+  .container {
+    max-width: 100%;
+  }
+}
+@media ( min-width:576px ) and ( max-width: 768px ) {
+  .example-container {
+    height: 270px;
+    overflow: auto;
+  }
+  .container {
+    max-width: 85%;
+  }
+}
+@media ( min-width:768px ) and ( max-width: 1280px ) {
+  .example-container {
+    height: 270px;
+    overflow: auto;
+  }
+  .container {
+    max-width: 70%;
+  }
+}
+.checkout {
+  text-align: center;
+}
+th {
+  color: #f44336;
+}
+.action {
+  text-align: center;
 }
