--- a/src/app/components/shopping-page/shopping-page.component.html
+++ b/src/app/components/shopping-page/shopping-page.component.html
@@ -3,24 +3,25 @@
         <table mat-table [dataSource]="transactions">
           <!-- Item Column -->
           <ng-container matColumnDef="item">
-            <th mat-header-cell *matHeaderCellDef> Item </th>
+            <th mat-header-cell *matHeaderCellDef> Nom </th>
             <td mat-cell *matCellDef="let transaction"> {{transaction.item}} </td>
             <td mat-footer-cell *matFooterCellDef> Total </td>
           </ng-container>
       
           <!-- Cost Column -->
           <ng-container matColumnDef="cost">
-            <th mat-header-cell *matHeaderCellDef> Cost </th>
+            <th mat-header-cell *matHeaderCellDef> Prix </th>
             <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
             <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
           </ng-container>
 
           <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef> Action </th>
-            <td mat-cell *matCellDef="let transaction"> 
+            <th mat-header-cell *matHeaderCellDef class="action"> Action </th>
+            <td mat-cell *matCellDef="let transaction" class="action"> 
                 <span class="material-icons add" (click)="plusItem()"> add </span>
                 <span class="number-item"> 1 </span>
-                <span class="material-icons remove" (click)="removeItem()"> remove </span>
+                <span class="material-icons remove" (click)="removeOneItem()"> remove </span>
+                <span class="material-icons" (click)="removeItem()"> clear </span>
             </td>
             <td mat-footer-cell *matFooterCellDef>  </td>
           </ng-container>
