--- a/src/app/components/checkout-form/checkout-form.component.css
+++ b/src/app/components/checkout-form/checkout-form.component.css
@@ -1,3 +1,11 @@
 .example-form .mat-form-field + .mat-form-field {
     margin-left: 8px;
   }
+mat-card-content.mat-card-content {
+  text-align: center;
+}
+.back-btn {
+  margin-right: 10%;
+  background-color: black;
+  color: white;
+}
