--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -40,3 +40,7 @@
 mat-toolbar.mat-toolbar.expanded-toolbar.mat-warn.mat-toolbar-multiple-rows {
     padding: 0 7%;
 }
+.btn-back {
+    background-color: black;
+    color: white;
+}
