--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -48,4 +48,19 @@ img.card-img {
 .application {
     background: #f44336;
     padding: 3%;
+    max-height: 300px;
+}
+@media ( min-width:768px ) and ( max-width: 1280px ) {
+    .mobile-img {
+        content:url("/assets/mobiles/telephone.png");
+    }
+}
+.mobile {
+    max-width: 25%;
+}
+.mobile-img {
+    max-width: 150%;
+    position: relative;
+    left: 30%;
+    bottom: 0%;
 }
