--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -324,6 +324,9 @@
             <img src="../../../assets/images/ios.png" alt="" srcset="">
           </div>
         </div>
+        <div class="col-md-6 mobile">
+          <img class="mobile-img" src="" alt="" srcset="">
+        </div>
       </div>
     </div>
 </div>
