internet explore media query ok

--- a/src/app/components/shop-cart-modal/shop-cart.component.css
+++ b/src/app/components/shop-cart-modal/shop-cart.component.css
@@ -27,7 +27,7 @@ button {
 .div-btn {
     text-align: center;
 }
-@media ( max-width: 576px ) {
+@media all and ( max-width: 576px ) {
     .quantity {
         text-align: center;
     }
