--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -6,12 +6,12 @@
     flex: 1 1 auto;
   }
 
-  @media ( max-width: 576px ) {
+@media ( max-width: 576px ) {
     a .logo { 
         max-width: 35%; 
     }
 }
-@media ( min-width:576px ) and ( max-width: 768px ) {
+@media all and ( min-width:576px ) {
     a .logo { 
         max-width: 100%; 
     }
@@ -20,7 +20,7 @@
         text-align: center;
     }
 }
-@media ( min-width:768px ) and ( max-width: 1280px ) {
+@media all and ( min-width:768px )  {
     a .logo { 
         max-width: 100%; 
     }
