--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -50,11 +50,6 @@ img.card-img {
     padding: 3%;
     max-height: 300px;
 }
-@media ( min-width:768px ) and ( max-width: 1280px ) {
-    .mobile-img {
-        content:url("/assets/mobiles/telephone.png");
-    }
-}
 .mobile {
     max-width: 25%;
 }
@@ -63,4 +58,20 @@ img.card-img {
     position: relative;
     left: 30%;
     bottom: 0%;
+}
+
+@media all and ( min-width:768px ) {
+    img.img-size {
+        height: 100px;
+        object-fit: cover;
+        object-position: center center;
+    }
+    .btn-floating.halfway-fab {
+        position: absolute;
+        right: 24px;
+        bottom: -10px;
+    }
+    .mobile-img {
+        content:url("/assets/mobiles/telephone.png");
+    }
 }
