--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -42,272 +42,48 @@
     </div>
     <div class="offre">
       <div ><h3 class="speciale">Offres spéciales</h3></div>
-      <div class="fast-food row">
-          <div class="col-md-3">
+      <div  class="fast-food row">
+          <div *ngFor="let item of specialFoods" class="col-md-3">
               <div class="card">
                   <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red" (click)="openDialog('data yoo')">
+                    <img class="img-size" src= "{{ item.imagePath }}">
+                    <a class="btn-floating halfway-fab waves-effect waves-light red" (click)="openDialog(item)">
                       <i class="material-icons">add_shopping_cart</i>
                     </a>
                   </div>
                   <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
+                    <span class="card-title">{{ item.name }}</span>
+                    <div class="truncate " > {{ item.description }} </div>
                   </div>
                   <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
+                    <span class="left-align"><i>{{ item.restaurant }}</i></span>
+                    <span class="right-align">{{ item.price }} F</span>
                   </div>
               </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-  
+          </div>  
       </div>
     </div>
     <div class="offre">
       <div><h3 class="burkinabe">Cuisine burkinabe</h3> </div>
       <div class="fast-food row">
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
+        <div *ngFor="let item of burkinabeFoods" class="col-md-3">
+          <div class="card">
+              <div class="card-image">
+                <img class="img-size" src= "{{ item.imagePath }}">
+                <a class="btn-floating halfway-fab waves-effect waves-light red" (click)="openDialog(item)">
+                  <i class="material-icons">add_shopping_cart</i>
+                </a>
+              </div>
+              <div class="card-content">
+                <span class="card-title">{{ item.name }}</span>
+                <div class="truncate " > {{ item.description }} </div>
+              </div>
+              <div class="card-action">
+                <span class="left-align"><i>{{ item.restaurant }}</i></span>
+                <span class="right-align">{{ item.price }} F</span>
               </div>
           </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add_shopping_cart</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Card Title</span>
-                    <div class="truncate " >I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>Petit Paris</i></span>
-                    <span class="right-align">7000 F</span>
-                  </div>
-              </div>
-          </div>
-  
+      </div>    
       </div>
     </div>
     <div class="application">
