--- a/src/app/components/shop-cart-modal/shop-cart.component.html
+++ b/src/app/components/shop-cart-modal/shop-cart.component.html
@@ -29,6 +29,6 @@
     </div>
     <div class="div-btn" >
         <button class="back-btn" mat-button [mat-dialog-close]="" cdkFocusInitial>Retour</button>
-        <button *ngIf="data" mat-raised-button color="warn" (click)="addFood('food')" >Ajouter</button>
+        <button *ngIf="data" mat-raised-button color="warn" (click)="addFood()" >Ajouter</button>
     </div>
 </div>
